fix spacing with news stories

--- a/src/app/news-list/news-list.component.css
+++ b/src/app/news-list/news-list.component.css
@@ -12,6 +12,11 @@
 #author{
   color: grey;
 }
-.col-md{
-  margin-left: 50px;
+.card{
+  max-height: 200px;
+  min-height: 200px;
+  padding: 15px;
+  margin: auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
